@@ -1,5 +1,5 @@
 Name: git-annex
-Version: 3.20120123
+Version: 3.20120124
 Cabal-Version: >= 1.6
 License: GPL
 Maintainer: Joey Hess <joey@kitenet.net>
